backend/kubernetes/elasticsearch-some-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch-some
  name: elasticsearch-some
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch-some
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./kubernetes
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-default: "true"
        io.kompose.service: elasticsearch-some
    spec:
      containers:
        - env:
            - name: ELASTIC_CONTAINER
              value: "true"
            - name: discovery.type
              value: single-node
          image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9200
          name: elasticsearch1
          ports:
            - containerPort: 9200
          resources: {}
      hostname: elasticsearch
      restartPolicy: Always
status: {}
