backend/kubernetes/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./kubernetes
        kompose.version: 1.29.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-default: "true"
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: GF_SERVER_ROOT_URL
              value: http://my.grafana.server/
          image: grafana/grafana-enterprise:9.5.3
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:3000
          name: grafana1
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-data
      hostname: grafana
      restartPolicy: Always
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
status: {}
