backend/kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./kubernetes
        kompose.version: 1.29.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-default: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - env:
            - name: NGINX_HOST
              value: tweetbit.com
            - name: NGINX_PORT
              value: "80"
          image: nginx:1.24
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:80/health
          name: nginx
          ports:
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-claim0
      hostname: nginx
      restartPolicy: Always
      volumes:
        - name: nginx-claim0
          persistentVolumeClaim:
            claimName: nginx-claim0
status: {}
