backend/kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./kubernetes
        kompose.version: 1.29.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-default: "true"
        io.kompose.service: redis
    spec:
      containers:
        - image: redis:7.0.7-alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
          name: redis1
          ports:
            - containerPort: 6379
              hostPort: 6379
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redis
      hostname: redis
      restartPolicy: Always
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis
status: {}
