backend/kubernetes/timelineservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: timelineservice
  name: timelineservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: timelineservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./kubernetes
        kompose.version: 1.29.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-default: "true"
        io.kompose.service: timelineservice
    spec:
      containers:
        - image: timelineservice
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:5006/health
          name: timelineservice
          ports:
            - containerPort: 5006
              hostPort: 5006
              protocol: TCP
          resources: {}
      hostname: timelineservice
      restartPolicy: Always
status: {}
