backend/kubernetes/broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  ports:
    - name: "29092"
      port: 29092
      targetPort: 29092
    - name: "9093"
      port: 9093
      targetPort: 9093
    - name: "9101"
      port: 9101
      targetPort: 9101
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    io.kompose.service: broker
status:
  loadBalancer: {}
