backend/kubernetes/fanoutservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: fanoutservice
  name: fanoutservice
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    io.kompose.service: fanoutservice
status:
  loadBalancer: {}
