backend/kubernetes/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger
  name: jaeger
spec:
  ports:
    - name: "5775"
      port: 5775
      protocol: UDP
      targetPort: 5775
    - name: "6831"
      port: 6831
      protocol: UDP
      targetPort: 6831
    - name: "6832"
      port: 6832
      protocol: UDP
      targetPort: 6832
    - name: "5778"
      port: 5778
      targetPort: 5778
    - name: "16686"
      port: 16686
      targetPort: 16686
    - name: "14268"
      port: 14268
      targetPort: 14268
    - name: "9411"
      port: 9411
      targetPort: 9411
    - name: "4318"
      port: 4318
      targetPort: 4318
  selector:
    io.kompose.service: jaeger
status:
  loadBalancer: {}
