backend/kubernetes/timelineservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: timelineservice
  name: timelineservice
spec:
  ports:
    - name: "5006"
      port: 5006
      targetPort: 5006
  selector:
    io.kompose.service: timelineservice
status:
  loadBalancer: {}
