backend/kubernetes/writeservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./kubernetes
    kompose.version: 1.29.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: writeservice
  name: writeservice
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5002
  selector:
    io.kompose.service: writeservice
status:
  loadBalancer: {}
